[gd_scene load_steps=55 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/millie_sprite.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/art/ui/touch_button_left.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/touch_button_right.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/touch_button_jump.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/touch_button_fire.png" type="Texture" id=8]
[ext_resource path="res://src/Ability/GrazeSystem.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Ability/Base/BaseAbilitySystemComponent.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Ability/Ability_Dash.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/AnimationPlayer/AnimationPlayerState.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/art/weapons/sword.png" type="Texture" id=14]
[ext_resource path="res://src/AnimationPlayer/AnimationPlayerState_Player.gd" type="Script" id=15]
[ext_resource path="res://src/Ability/Base/BaseGameplayEffect.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/audio/sfx/PING_PONG.wav" type="AudioStream" id=19]
[ext_resource path="res://src/Level/ParallaxBackground/ParallaxBackground_Enna.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/art/Gradient/palette_swap_gradient.gdshader" type="Shader" id=21]
[ext_resource path="res://assets/art/Gradient/gradient_vfx_invincible.tres" type="Gradient" id=22]
[ext_resource path="res://assets/art/vfx/playerOnHit.png" type="Texture" id=24]
[ext_resource path="res://assets/audio/sfx/getting hit.wav" type="AudioStream" id=25]
[ext_resource path="res://src/UserInterface/OverPlayerUI.tscn" type="PackedScene" id=26]

[sub_resource type="GradientTexture" id=32]
gradient = ExtResource( 22 )

[sub_resource type="ShaderMaterial" id=33]
shader = ExtResource( 21 )
shader_param/mix_amount = 1.0
shader_param/gradient = SubResource( 32 )

[sub_resource type="RectangleShape2D" id=13]

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=19]
resource_name = "dash"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}

[sub_resource type="Animation" id=23]
resource_name = "down_falling_active_weapon"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 33 ]
}

[sub_resource type="Animation" id=22]
resource_name = "down_falling_weapon"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}

[sub_resource type="Animation" id=21]
resource_name = "down_idle"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=31]
resource_name = "down_idle_weapon"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 7 ]
}

[sub_resource type="Animation" id=25]
resource_name = "down_jumping_active_weapon"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 33 ]
}

[sub_resource type="Animation" id=24]
resource_name = "down_jumping_weapon"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}

[sub_resource type="Animation" id=2]
resource_name = "down_falling"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 5, 9 ]
}

[sub_resource type="Animation" id=15]
resource_name = "falling_active_weapon"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=16]
resource_name = "idle_active_weapon"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=6]
resource_name = "down_jumping"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.24418, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 4, 0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "jumping_active_weapon"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=8]
length = 0.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}

[sub_resource type="Animation" id=18]
resource_name = "run_active_weapon"
length = 0.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23 ]
}

[sub_resource type="Animation" id=9]
length = 0.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="Animation" id=12]
resource_name = "swing"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sword:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=27]
resource_name = "up_falling_active_weapon"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 37 ]
}

[sub_resource type="Animation" id=29]
resource_name = "up_falling_weapon"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="Animation" id=20]
resource_name = "up_idle"
length = 0.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=30]
resource_name = "up_idle_weapon"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 6 ]
}

[sub_resource type="Animation" id=26]
resource_name = "up_jumping_active_weapon"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 37 ]
}

[sub_resource type="Animation" id=28]
resource_name = "up_jumping_weapon"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 22 )

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
collision_mask = 30
script = ExtResource( 1 )
Team_ID = 1

[node name="LevelUpEffect_Atk" parent="." instance=ExtResource( 16 )]
StatToModify = 3
ValueToModify = 2.5

[node name="LevelUpEffect_MaxHP" parent="." instance=ExtResource( 16 )]
StatToModify = 11
ValueToModify = 15.0

[node name="LevelUpEffect_Invincible" parent="." instance=ExtResource( 16 )]
EffectDurationType = 1
EffectDuration = 3.0
StatToModify = 8
ValueToModify = 1.0

[node name="GameplayEffectSprite" parent="LevelUpEffect_Invincible" index="0"]
material = SubResource( 33 )

[node name="CheatBuff" type="Node" parent="."]

[node name="CheatExp" parent="CheatBuff" instance=ExtResource( 16 )]
bExpAddFerver = false
StatToModify = 5
ValueToModify = 1000.0

[node name="CheatAtk" parent="CheatBuff" instance=ExtResource( 16 )]
bExpAddFerver = false
StatToModify = 3
ValueToModify = 500.0

[node name="CheatTakeDamage" parent="CheatBuff" instance=ExtResource( 16 )]
bExpAddFerver = false
StatToModify = 1
ValueToModify = 100.0

[node name="AbilitySystemComponent" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -22 )
InitStat_HP = 200.0
InitStat_IframeSeconds = 0.3

[node name="Ability_Dash" parent="AbilitySystemComponent" instance=ExtResource( 12 )]
position = Vector2( 0, -22 )

[node name="GrazeSystem" parent="AbilitySystemComponent" instance=ExtResource( 9 )]

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 8

[node name="HoldToShootTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[node name="JumpButtonTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.125
one_shot = true

[node name="FloatTimer" type="Timer" parent="JumpButtonTimer"]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="Sword" type="Sprite" parent="."]
visible = false
position = Vector2( 12, -12 )
scale = Vector2( 0.703125, 0.625 )
texture = ExtResource( 14 )

[node name="Area2D" type="Area2D" parent="Sword"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/Area2D"]
modulate = Color( 0.890196, 0.0666667, 0.0666667, 1 )
self_modulate = Color( 0.831373, 0.113725, 0.113725, 1 )
position = Vector2( -1.42222, -3.2 )
shape = SubResource( 13 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -22 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
hframes = 4
vframes = 10
frame = 12

[node name="ShootSocket" type="Position2D" parent="Sprite"]

[node name="TargetingSocket" type="Position2D" parent="Sprite"]

[node name="AnimationPlayerState" parent="." instance=ExtResource( 13 )]
playback_speed = 2.6
anims/RESET = SubResource( 14 )
anims/crouch = SubResource( 1 )
anims/dash = SubResource( 19 )
anims/down_falling_active_weapon = SubResource( 23 )
anims/down_falling_weapon = SubResource( 22 )
anims/down_idle = SubResource( 21 )
anims/down_idle_weapon = SubResource( 31 )
anims/down_jumping_active_weapon = SubResource( 25 )
anims/down_jumping_weapon = SubResource( 24 )
anims/falling = SubResource( 2 )
anims/falling_active_weapon = SubResource( 15 )
anims/falling_weapon = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/idle_active_weapon = SubResource( 16 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_active_weapon = SubResource( 17 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 8 )
anims/run_active_weapon = SubResource( 18 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )
anims/swing = SubResource( 12 )
anims/up_falling_active_weapon = SubResource( 27 )
anims/up_falling_weapon = SubResource( 29 )
anims/up_idle = SubResource( 20 )
anims/up_idle_weapon = SubResource( 30 )
anims/up_jumping_active_weapon = SubResource( 26 )
anims/up_jumping_weapon = SubResource( 28 )
script = ExtResource( 15 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -28 )
current = true
zoom = Vector2( 0.7, 0.7 )
process_mode = 0
smoothing_enabled = true
smoothing_speed = 30.0

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -22 )
shape = SubResource( 11 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0
bus = "Sfx"

[node name="LevelUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 6.0
bus = "Sfx"

[node name="OverPlayerUI" parent="." instance=ExtResource( 26 )]
margin_left = -22.0
margin_top = -72.0
margin_right = -22.0
margin_bottom = -72.0

[node name="Vfx" type="Node2D" parent="."]

[node name="TakeDamageVfx" type="Sprite" parent="Vfx"]
visible = false
position = Vector2( 0, -16 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 24 )
hframes = 2
vframes = 2

[node name="TakeDamageVfxTimer" type="Timer" parent="Vfx"]
wait_time = 0.3
one_shot = true

[node name="TakeDamageSfx" type="AudioStreamPlayer2D" parent="Vfx"]
stream = ExtResource( 25 )
bus = "Sfx"

[node name="ParallaxBackground_Enna" parent="." instance=ExtResource( 20 )]

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Left" type="TouchScreenButton" parent="UI"]
position = Vector2( 27.7593, 360.87 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="UI"]
position = Vector2( 121.542, 361.415 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="UI"]
position = Vector2( 666.224, 359.02 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 7 )
action = "jump"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="UI"]
position = Vector2( 668.073, 262.788 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
action = "shoot"
visibility_mode = 1

[connection signal="timeout" from="HoldToShootTimer" to="." method="_on_HoldToShootTimer_timeout"]
[connection signal="timeout" from="JumpButtonTimer" to="." method="_on_JumpButtonTimer_timeout"]
[connection signal="timeout" from="JumpButtonTimer/FloatTimer" to="." method="_on_FloatTimer_timeout"]
[connection signal="timeout" from="Vfx/TakeDamageVfxTimer" to="." method="_on_TakeDamageVfxTimer_timeout"]

[editable path="LevelUpEffect_Invincible"]
